--- a/app/src/main/res/layout/library_ar.xml
+++ b/app/src/main/res/layout/library_ar.xml
@@ -13,7 +13,8 @@
         android:id="@+id/arFragment"
         android:name="com.upce.ar.CustomArFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout="@layout/library_ar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
