--- a/app/src/main/res/layout/model_selection.xml
+++ b/app/src/main/res/layout/model_selection.xml
@@ -53,14 +53,15 @@
 
     <ImageView
         android:id="@+id/imageViewModel"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="44dp"
         android:background="@drawable/imageview_border"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/listViewModels"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:padding="5dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btnBack"
